my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.2/errors/endian_int_return/endian_int_return.dmlc_stderr
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_endian_int_return.dml:7:7: In test
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_endian_int_return.dml:10:1: error EEARG: cannot use endian integer as argument type in declaration
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_endian_int_return.dml:14:1: In init
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_endian_int_return.dml:21:11: error EREF: reference to unknown object 'm'
